// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio demo renders basic demo correctly 1`] = `
<div>
  <div class="vs-radio">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span> Radio</label></div>
  </div>
  <div class="vs-radio vs-radio-checked">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span> Checked Radio</label></div>
  </div>
</div>
`;

exports[`Radio demo renders disabled demo correctly 1`] = `
<div>
  <div class="vs-radio vs-radio-disabled">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="-1" class="vs-radio-wrapper"><input type="radio" disabled="disabled"><span class="vs-radio-inner"></span></span>Radio</label></div>
  </div>
  <div class="vs-radio vs-radio-disabled vs-radio-checked">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="-1" class="vs-radio-wrapper"><input type="radio" disabled="disabled"><span class="vs-radio-inner"></span></span>
        Checked Radio
      </label></div>
  </div>
</div>
`;

exports[`Radio demo renders radio-group demo correctly 1`] = `
<div>
  <div role="button" class="vs-radio-group vs-radio-group-default">
    <p>Group1</p>
    <div class="vs-radio vs-radio-checked">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item A</label></div>
    </div>
    <div class="vs-radio">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item B</label></div>
    </div>
    <p>Group2</p>
    <div class="vs-radio">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item C</label></div>
    </div>
    <div class="vs-radio vs-radio-disabled">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="-1" class="vs-radio-wrapper"><input type="radio" disabled="disabled"><span class="vs-radio-inner"></span></span>
          Item D
        </label></div>
    </div>
  </div>
  <hr>
  <div class="vjs-tree is-root">
    <!---->
    <div> <span class="vjs-tree__brackets">
    {
  </span> <span style="display: none;"><span class="vjs-tree__brackets">
      {...}
    </span>
      <!----></span></div>
    <div class="vjs-tree__content has-line">
      <div class="vjs-tree">
        <!---->
        <div><span class="vjs-key">"value":</span> <span class="vjs-value vjs-value__string">
    "A"
  </span></div>
      </div>
    </div>
    <div><span class="vjs-tree__brackets">
    }
  </span></div>
  </div>
</div>
`;

exports[`Radio demo renders radio-group-controlled demo correctly 1`] = `
<div role="button" class="vs-radio-group vs-radio-group-default vs-radio-group-inline">
  <div class="vs-radio vs-radio-inline vs-radio-checked">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item A</label></div>
  </div>
  <div class="vs-radio vs-radio-inline">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item B</label></div>
  </div>
  <div class="vs-radio vs-radio-inline">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item C</label></div>
  </div>
  <div class="vs-radio vs-radio-inline vs-radio-disabled">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="-1" class="vs-radio-wrapper"><input type="radio" disabled="disabled"><span class="vs-radio-inner"></span></span>
        Item D
      </label></div>
  </div>
</div>
`;

exports[`Radio demo renders radio-group-initial demo correctly 1`] = `
<div role="button" class="vs-radio-group vs-radio-group-default">
  <div class="vs-radio vs-radio-checked">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item A</label></div>
  </div>
  <div class="vs-radio">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item B</label></div>
  </div>
  <div class="vs-radio">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item C</label></div>
  </div>
  <div class="vs-radio vs-radio-disabled">
    <div role="button" class="vs-radio-checker"><label title=""><span tabindex="-1" class="vs-radio-wrapper"><input type="radio" disabled="disabled"><span class="vs-radio-inner"></span></span>
        Item D
      </label></div>
  </div>
</div>
`;

exports[`Radio demo renders radio-group-inline demo correctly 1`] = `
<div>
  <div role="button" class="vs-radio-group vs-radio-group-default vs-radio-group-inline">
    <div class="vs-radio vs-radio-inline vs-radio-checked">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item A</label></div>
    </div>
    <div class="vs-radio vs-radio-inline">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item B</label></div>
    </div>
    <div class="vs-radio vs-radio-inline">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item C</label></div>
    </div>
    <div class="vs-radio vs-radio-inline vs-radio-disabled">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="-1" class="vs-radio-wrapper"><input type="radio" disabled="disabled"><span class="vs-radio-inner"></span></span>
          Item D
        </label></div>
    </div>
  </div>
  <hr>
  <div class="vjs-tree is-root">
    <!---->
    <div> <span class="vjs-tree__brackets">
    {
  </span> <span style="display: none;"><span class="vjs-tree__brackets">
      {...}
    </span>
      <!----></span></div>
    <div class="vjs-tree__content has-line">
      <div class="vjs-tree">
        <!---->
        <div><span class="vjs-key">"value":</span> <span class="vjs-value vjs-value__string">
    "A"
  </span></div>
      </div>
    </div>
    <div><span class="vjs-tree__brackets">
    }
  </span></div>
  </div>
</div>
`;

exports[`Radio demo renders radio-group-inline-picker demo correctly 1`] = `
<div>
  <div role="button" class="vs-radio-group vs-radio-group-picker vs-radio-group-inline">
    <div class="vs-radio vs-radio-inline vs-radio-checked">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item A</label></div>
    </div>
    <div class="vs-radio vs-radio-inline">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item B</label></div>
    </div>
    <div class="vs-radio vs-radio-inline">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="0" class="vs-radio-wrapper"><input type="radio"><span class="vs-radio-inner"></span></span>Item C</label></div>
    </div>
    <div class="vs-radio vs-radio-inline vs-radio-disabled">
      <div role="button" class="vs-radio-checker"><label title=""><span tabindex="-1" class="vs-radio-wrapper"><input type="radio" disabled="disabled"><span class="vs-radio-inner"></span></span>
          Item D
        </label></div>
    </div>
  </div>
  <hr>
  <div class="vjs-tree is-root">
    <!---->
    <div> <span class="vjs-tree__brackets">
    {
  </span> <span style="display: none;"><span class="vjs-tree__brackets">
      {...}
    </span>
      <!----></span></div>
    <div class="vjs-tree__content has-line">
      <div class="vjs-tree">
        <!---->
        <div><span class="vjs-key">"value":</span> <span class="vjs-value vjs-value__string">
    "A"
  </span></div>
      </div>
    </div>
    <div><span class="vjs-tree__brackets">
    }
  </span></div>
  </div>
</div>
`;
